[gd_scene load_steps=3 format=3 uid="uid://brr635dl8bjpp"]

[ext_resource type="Script" uid="uid://dcdu7vy83uuxk" path="res://scripts/test_polygons.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ba243bdc80rps" path="res://scenes/chunk_polygon.tscn" id="2_cn8gp"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="OuterChunkPolygon" parent="StaticBody2D" instance=ExtResource("2_cn8gp")]
visible = false
polygon = PackedVector2Array(-200, -200, 200, -200, 200, 200, -200, 200)

[node name="InnerChunkPolygon" parent="StaticBody2D" instance=ExtResource("2_cn8gp")]
visible = false
rotation = 0.785398
polygon = PackedVector2Array(-100, -100, -100, 0, 0, 0, 0, -100)

[node name="InnerChunkPolygon2" parent="StaticBody2D" instance=ExtResource("2_cn8gp")]
visible = false
position = Vector2(0, 150)
polygon = PackedVector2Array(-100, -100, -100, 0, 0, 0, 0, -100)

[node name="ResultChunkPolygon" parent="StaticBody2D" instance=ExtResource("2_cn8gp")]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Label" type="Label" parent="."]
anchors_preset = -1
offset_left = -485.0
offset_top = -306.0
offset_right = -445.0
offset_bottom = -283.0
